--- a/Chapter3.ipynb
+++ b/Chapter3.ipynb
@@ -21,7 +21,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,31 @@
     "\n",
     "import turtle \n",
     "wn = turtle.Screen()\n",
+    "wn.bgcolor(\"Khaki4\")\n",
+    "wn.title(\"Hello, Alex!\")\n",
+    "\n",
     "alex = turtle.Turtle()\n",
+    "alex.color(\"blue\")\n",
+    "alex.pensize(3)\n",
     "\n",
     "alex.forward(50)\n",
-    "alex.left(90)\n",
-    "alex.forward(50)\n",
+    "alex.left(120)\n",
+    "alex.forward(100)\n",
     "\n",
     "wn.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.3 \n",
+    "\n",
+    "for f in [\"Joe\",\"Zoe\",\"Brad\",\"Angelina\",\"Zuki\",\"Thandi\",\"Paris\"]:\n",
+    "    invite = \"Hi \" + f + \". Please come to my party Saturday!\"\n",
+    "    print(invite)"
    ]
   },
   {
