--- a/Chapter4.ipynb
+++ b/Chapter4.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.3"
+   "version": "3.7.3-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -16,7 +16,11 @@
   "name": "python",
   "npconvert_exporter": "python",
   "pygments_lexer": "ipython3",
-  "version": 3
+  "version": 3,
+  "kernelspec": {
+   "name": "python37364bitlukesvirtualenv004faf5d71dd4145ad76f3cd1cae3184",
+   "display_name": "Python 3.7.3 64-bit ('lukes': virtualenv)"
+  }
  },
  "cells": [
   {
@@ -53,10 +57,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#1 \n",
     "import turtle\n",
@@ -80,8 +80,13 @@
     "    tess.forward(20)\n",
     "    tess.pendown()\n",
     "\n",
-    "wn.mainloop()\n"
-   ]
+    "wn.mainloop()\n",
+    ""
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 1
   },
   {
    "cell_type": "code",
